# tools

./: README  pyproject.toml  shell.nix
jmntool/: cli.py
jmntool/commands/: cmd_git_clonerepos.py  cmd_git_gomain.py  cmd_git_listdirty.py  cmd_git_listrepos.py  cmd_init.py
